--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test:AddToCart":"npx cypress run --spec cypress/e2e/CypressInterviewQs/POM_HomePage/homePage.cy.js",
+    "test:AddToCart": "npx cypress run --spec cypress/e2e/CypressInterviewQs/POM_HomePage/homePage.cy.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "chromeExecution": "npx cypress run cypress/e2e/CypressInterviewQs/**/*.js --browser chrome --headed",
     "edge": "npx cypress run cypress/e2e/CypressInterviewQs/**/*.js --browser edge --headed",
@@ -13,6 +13,7 @@
   "author": "Arjun Jadhav",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^13.9.0"
+    "cypress": "^13.9.0",
+    "node-xlsx": "^0.24.0"
   }
 }
